SERVER-71950 Fail and log the operation when out-of-order keys are detected in WiredTiger